# GameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  GameEngine.sln  README.md  vcpkg.json
Chess/: Bitboard.cpp  Bitboard.h  Bitboard.ixx  Board.cpp  Board.h  Board.ixx  BoardBuilder.cpp  BoardBuilder.h  BoardBuilder.ixx  BoardRenderer.h  BoardRenderer.ixx  CMakeLists.txt  ChessCore.h  FENParser.cpp  FENParser.h  FENParser.ixx  MagicNumberGenerator.cpp  MagicNumberGenerator.h  MagicNumberGenerator.ixx  MoveSet.h  MovementSet.cpp  MovementSet.h  MovementSet.ixx  main.cpp
Chess/Pieces/: ChessCore.h  Move.h  Piece.h
GameEngine/: Application.cpp  Application.h  Buffer.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  EngineCore.h  GameEngine.vcxproj.filters  Image.cpp  Image.h  RendererState.h  imgui_example.cpp  main.cpp
GameEngine/Log/: Log.cpp
GameEngine/Platform/: Window.cpp  Window.h
GameEngine/Platform/Windows/: LinuxWindow.cpp  LinuxWindow.h  WindowsWindow.cpp  WindowsWindow.h
GameEngine/Platforn/: Window.cpp  Window.h
GameEngine/Platforn/Windows/: WindowsWindow.cpp
GameEngine/renderer/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  Image.cpp  Image.h  Initialisers.cpp  Initialisers.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  RendererCore.cpp  RendererCore.h  RendererState.h  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  Vertex.h
GameEngine/shaders/: board.frag  board.vert  boardFrag.spv  boardVert.spv  compile.bat  frag.spv  shader.frag  shader.vert  sprite.frag  sprite.vert  spriteFrag.spv  spriteVert.spv  vert.spv
GameEngine/ui/: gui.cpp  gui.h
GameEngine2/: GameEngine.vcxproj  GameEngine.vcxproj.filters  Geometry.ixx  imgui.ini  main.cpp
GameEngine2/Log/: Log.cpp  Log.h
GameEngine2/Platforn/: Window.h
GameEngine2/Platforn/Windows/: WindowsWindow.cpp
UnitTests/: CMakeLists.txt  tests.cpp
